updating the AJAX response

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
          }).then(function(response){
          console.log(response);
 
-         $("#weather-view").text(JSON.stringify(response.city));
+         $("#weather-view").text(JSON.stringify(response));
          });
 
         // YOUR CODE GOES IN THESE DASHES. DO NOT MANUALLY EDIT THE HTML ABOVE
