--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div>Denver</div>
       <div>New York</div>
       <div>Orlando</div>
-      <div>San Fransisco</div>
+      <div>San Diego</div>
       
     </div>
 
@@ -40,7 +40,7 @@
  
 <section id="weather">
     <heading>
-        <h1>Weather Dashboard</h1>
+        <h1 id="heading">Weather Dashboard</h1>
       </heading>
 
     
