--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   <script src="app.js"></script>
   <title>Weather Dashboard 6</title>
 </head>
-<body>
+<body id="body">
   
 
 <div id="container">
   <section id="cities">
-    <h3>Search for a City:</h3>
+    <h3>Search City:</h3>
     <div id="search">    
           <input type="text" name="searchText" list="city_list" autocomplete="on">
           <button type="button">Search</button>
